# value

./: .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  Makefile  PARSER_ARCHITECTURE.md  PARSER_IMPLEMENTATION.md  PARSER_USAGE.md  README.md  input.flg
examples/: custom_validators.cpp  example.cpp  example_config.json  example_config_semicolon.json  parser_examples.cpp
lib/include/: Parser.hpp  ParserConfig.hpp  ParserDriver.hpp  Values.hpp
lib/src/: Parser.cpp  ParserConfig.cpp  ParserDriver.cpp  parser.l  parser.y
test/: testParser.cpp  testParserConfig.cpp  testValidatorRegistry.cpp  testValues.cpp
